# KHAPE

./: Cargo.toml  README.md
benches/: khape.rs
src/: alias.rs  encryption.rs  group.rs  hash.rs  ideal_cipher.rs  key_derivation.rs  khape.rs  lib.rs  main.rs  message.rs  oprf.rs  prf.rs  slow_hash.rs  tripledh.rs  try_dalek.rs  try_oprf.rs
