[package]
name = "khape"
version = "0.1.0"
authors = ["Julien Béguin <julien.beguin99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "3.2.0", features = ["serde"] }
x25519-dalek = "1.2.0"
voprf = "0.3.0"
rand = "0.8.4"
sha2 = "0.9.8" # à confirmer
#sodiumoxide = "0.2.7" # aes
serde = { version = "1.0", features = ["derive"] }
#bincode = "1.3.3"