[package]
name = "khape"
version = "0.1.0"
authors = ["Julien Béguin <julien.beguin99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
curve25519-dalek = { path = "../08-curve25519-dalek-fork" }

[dependencies]
curve25519-dalek = { version = "3.2.0", features = ["serde"] }
voprf = "0.3.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#bincode = "1.3.3"

sha3 = "0.9.1"
hmac = "0.11.0" # TODO utile ?
hkdf = "0.11"
serde-big-array = { version = "0.3.2", features = ["const-generics"] } # for ciphertext (64 bytes array)