[package]
name = "khape"
version = "0.1.0"
authors = ["Julien Béguin <julien.beguin99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench = []

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/jul0105/curve25519-dalek.git" }

[dependencies]
curve25519-dalek = { version = "3.2.0", features = ["serde"] }
voprf = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
#bincode = "1.3.3"

sha3 = "0.9"
hkdf = "0.11"
argon2 = "0.3"
serde-big-array = { version = "0.3", features = ["const-generics"] } # for ciphertext (64 bytes array)

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.3", features = ["html_reports", "csv_output"] }
aes = { version = "0.7.5", features = ["ctr"] }
ctr = "0.8.0"

[[bench]]
name = "khape"
harness = false
required-features = ["bench"]